Code check in By Sagar for Asset Management

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflowRew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflowRew.xhtml
@@ -10,7 +10,7 @@
         <div class="contentSecond">
 
 
-            <div class="tcLabel">Dyna <h:outputLabel value="#{asstMgmtRvw.selApprovTheme}"/>
+            <div class="tcLabel">
 
             </div>
             <p:accordionPanel styleClass="customAcco" id="idRvwAccord">
