--- a/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
@@ -120,6 +120,7 @@
                                                                        itemLabel="#{tempRbk.savedTemplateName}" itemValue="#{tempRbk.savedTemplateName}"/>
                                                     </p:selectOneMenu>
                                                 </p:outputLabel>
+                                                <div class="EmptyBox30"></div>
                                                 <p:panel rendered="#{AssetManagementUpd.getRollbackMsg() != null}"
                                                          style="border: 0px; background: transparent; text-align: left;" styleClass="deleteAdvError">
                                                     <h:outputText styleClass="errorText"
@@ -256,6 +257,7 @@
 
                                     </p:selectOneMenu>
                                 </p:outputLabel>
+                                <div class="EmptyBox30"></div>
                                 <p:panel rendered="#{AssetManagementUpd.vldFailureStatus}"
                                          style="border: 0px; background: transparent; text-align: left;" styleClass="deleteAdvError"
                                          id="idValidateError">
@@ -375,6 +377,7 @@
                                                            itemValue="#{basket.theme}"/>
                                         </p:selectOneMenu>
                                     </p:outputLabel>
+                                    <div class="EmptyBox30"></div>
                                     <p:panel rendered="#{AssetManagementAppr.getOutputMsg() != null}"
                                              style="border: 0px; background: transparent; text-align: left;" styleClass="deleteAdvError">
                                         <h:outputText styleClass="errorText"
