Code check in By Sagar for Account Emulation functionality of positioning

--- a/Invessence/modules/web/src/main/webapp/pages/productadmin/accountEmulation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/productadmin/accountEmulation.xhtml
@@ -73,7 +73,8 @@
 
                     <p:commandButton value="Fund Account" ajax="true" styleClass="" actionListener="#{acctEmulBean.fundAccount}" update="@form"
                     />
-
+                    <p:commandButton value="Create Positions" ajax="true" styleClass="" actionListener="#{acctEmulBean.createAccountPosition}" update="@form"
+                    />
 
                     <div class="EmptyBox20"></div>
 
