--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -274,10 +274,19 @@
                             <h:outputLink id="IRinfoPOP" value="#" style="color:#000000!important;">
                                 <i class="fa fa-info-circle" style="padding-right: 5px;"></i>Investment Risk
                             </h:outputLink></div>
-                        <p:tooltip for="IRinfoPOP" styleClass="tooltipIR" value="Investment risk or volatility of a portfolio is a statistical measure
-                        of the dispersion of returns for a given portfolio. Volatility can be measured by using the standard deviation
-                        of returns of the portfolio. Commonly, the higher the volatility, the riskier the portfolio. Example, volatility of
-                         Singapore Government Bonds could be 1.58% vs. Singapore Equities could be as high as 17%." position="bottom"/>
+                        <p:tooltip for="IRinfoPOP" styleClass="tooltipIR" value="  " position="bottom">
+                         <ul>
+                         	<li>
+                         		Investment risk or volatility of a portfolio is a statistical measure of the dispersion of returns for a given portfolio.
+                         	</li>
+                         	<li>
+                         		Volatility can be measured by using the standard deviation of returns of the portfolio.
+                         	</li>
+                         	<li>
+                         		Commonly, the higher the volatility, the riskier the portfolio. Example, volatility of Singapore Government Bonds could be 1.58% vs. Singapore Equities could be as high as 17%.
+                         	</li>
+                         </ul>
+                         </p:tooltip>
                         <div class="Wid100 IRCount">
                             <h:outputText id="uobir" value="#{uobpb.totalRisk}">
                                 <f:convertNumber pattern="##0.00%"/>
