UI changes done for Asset allocation is removed by sagar

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
@@ -19,7 +19,7 @@
             1. What is your employment situation?
         </h5>
         <p:selectOneRadio value="#{uobpb.riskCalculator.ans3}"
-                          styleClass="Goalchoose" id="uobddrcalc"
+                          styleClass="" id="uobddrcalc"
                           layout="pageDirection">
           <p:ajax listener="#{uobpb.onChangeValue}"
                     update=":ceForm:graphArea, :ceForm:buttonArea"/>
