--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q3.xhtml
@@ -18,7 +18,7 @@
             <h5>
                 3. What is your financial situation, including expenses, loans, savings for retirement and emergencies?
             </h5>
-            <p:selectOneRadio value="#{uobpb.riskCalculator.ans5}" id="uobrbtnriskcalc" styleClass="Goalchoose"
+            <p:selectOneRadio value="#{uobpb.riskCalculator.ans5}" id="uobrbtnriskcalc" styleClass=""
                               layout="pageDirection">
                 <p:ajax listener="#{uobpb.onChangeValue}"
                         update=":ceForm:graphArea, :ceForm:buttonArea"/>
