--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
@@ -120,17 +120,21 @@
                                             <div class="Wid50 cellBlock">Date Opened</div>
                                             <div class="Wid50 cellBlock">#{uobdash.selAccountList.get(0).displayDateOpened}</div>
                                         </div>
+                                        <div class="rowBlock">
+                                        </div>
+                                        <div class="rowBlock">
+                                        </div>
                                     </div>
 
                                     <div class="Wid100 acc_button_block">
                                         <div class="Container30 firstBtnBlck Fleft">
                                             <div class="boxBtn">
-                                                <i class="fa fa-file-text" aria-hidden="true"></i> <label>Holding</label>
+                                                <i class="fa fa-file-text" aria-hidden="true"></i> <label>Holding Details</label>
                                             </div>
                                         </div>
                                         <div class="Container30 centerRelCenter Fleft">
                                             <div class="boxBtn">
-                                                <i class="fa fa-pie-chart" aria-hidden="true"></i> <label>Strategy</label>
+                                                <i class="fa fa-pie-chart" aria-hidden="true"></i> <label>Change Strategy</label>
                                             </div>
                                         </div>
                                         <div class="Container30 centerRelRight Fleft">
