Committed by Sagar for user notification changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/alert_notification.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/alert_notification.xhtml
@@ -12,7 +12,7 @@
 
     <ui:define name="content">
 
-       <!--  <script type="text/javascript">
+       <script type="text/javascript">
             $(document).on('click','.multipleSelectionChkList',function(){
                 if($('.ui-chkbox-box').find('.ui-icon-check').length==0 )
                 {
@@ -25,7 +25,7 @@
             });
             //            });
 
-        </script> -->
+        </script>
         <!-- BOX START -->
         <h:form id="form" class="uob_user_alert_notification">
             <div class="layout-portlets-box">
